EA_94 - OrderSet Story Implementation
Added OrderGroup to EncounterTranscation
Saving Orders which are a prat of an OrderGroup when encounter is saved.